--- a/style.css
+++ b/style.css
@@ -249,28 +249,20 @@ header a {
 /*styling della sezione various hubs (graysh background)*/
 
 .col-container {
-    width: 33.33%;
+    width: 30%;
 }
 
 .various-hub-col {
-    width: 90%;
-    margin: 0 auto 50px;
+    margin-bottom: 50px;
     text-align: center;
     padding: 15px 25px;
     
 }
 
-#margin-left-0 {
-    margin-left: -18px;
+.margin-5 { 
+    margin: 0 5%;
 }
 
-#margin-right-0 {
-    margin-right: -18px;
-}
-
-#margin-right-none {
-    margin-right: 0px;
-}
 
 .various-hub-col img {
     margin-left: 50%;
